<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7bacf"
    tools:context=".Player_setup">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="255dp"
        android:layout_height="38dp"
        android:fontFamily="casual"
        android:text="@string/player_setup_title"
        android:textAlignment="center"
        android:textColor="#0B0A0A"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.143" />

    <TextView
        android:id="@+id/player1"
        android:layout_width="150dp"
        android:layout_height="29dp"
        android:text="@string/label1"
        android:textColor="#8F0C39"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/player1name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/player2"
        android:layout_width="150dp"
        android:layout_height="28dp"
        android:text="@string/label2"
        android:textColor="#0F6513"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/player2name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player1name"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/player1name"
        android:layout_width="358dp"
        android:layout_height="69dp"
        android:autofillHints=""
        android:background="@color/design_default_color_background"
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintStart_toStartOf="@+id/player1"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.151" />

    <EditText
        android:id="@+id/player2name"
        android:layout_width="344dp"
        android:layout_height="76dp"
        android:autofillHints=""
        android:background="@color/design_default_color_background"
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.626" />

    <Button
        android:id="@+id/button2"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:background="@drawable/green_button"
        android:onClick="submitButtonClick"
        android:text="@string/submitbutton"
        android:textColor="#0B0A0A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.991" />
</androidx.constraintlayout.widget.ConstraintLayout>